# data-engineering-bootcamp

./: .gitignore  Dockerfile  ingest_data.py  ny_taxi_data.ipynb  pyproject.toml
docker/: README.md  docker-compose.yml  ingest_data.py  notes.txt
docker/ny_taxi_postgres_data/: postmaster.pid
docker/ny_taxi_postgres_data/base/13468/: pg_internal.init
docker/ny_taxi_postgres_data/global/: pg_control  pg_internal.init
docker/ny_taxi_postgres_data/pg_stat_tmp/: global.stat
kestra/: 02_postgres_taxi.yaml  README.md  docker-compose.yml
ny_taxi_postgres_data/base/13468/: pg_internal.init
ny_taxi_postgres_data/base/16384/: 1247  1249  1259  16428  16433  16434  2608  2610  2619  2619_fsm  2619_vm  2658  2659  2662  2663  2673  2674  2678  2679  2696  2703  2704  2840  2841  3455  pg_internal.init
ny_taxi_postgres_data/global/: pg_control  pg_internal.init
ny_taxi_postgres_data/pg_stat/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
