[tool.poetry]
name = "de-zoomcamp"
version = "0.1.0"
description = ""
authors = ["salih.beskardes <salih.beskardes@mailbox.tu-dresden.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pgcli = "^4.1.0"
notebook = "^7.3.2"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
